@startuml

class object
class Vertebrate {
    def lay_eggs():\n   return None
}
class Mammal
class Bird {
    def lay_eggs():\n   return True
}
class Dinosaur {
    def lay_eggs():\n   return True
}
class Platypus
object <|-- Vertebrate
Vertebrate <|-- Mammal
Vertebrate <|-- Bird
Vertebrate <|-- Dinosaur
Bird <|-- Platypus
Mammal <|-- Platypus

@enduml